--- a/templates/product-template.html
+++ b/templates/product-template.html
@@ -23,8 +23,14 @@
   <meta name="twitter:description" content="{{metaDescription}}">
   <meta name="twitter:image" content="{{metaOgImage}}">
   
-  <!-- Favicon -->
+  <!-- Favicon y PWA -->
   <link rel="icon" type="image/png" href="../EXOlogo.png">
+  <link rel="apple-touch-icon" href="../EXOlogo.png">
+  <link rel="manifest" href="../manifest.json">
+  <meta name="theme-color" content="#00d4ff">
+  <meta name="apple-mobile-web-app-capable" content="yes">
+  <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
+  <meta name="apple-mobile-web-app-title" content="EXO">
   
   <!-- Fonts -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
